data/derived/sp14/progs/unify/prog0490.ml.out
Characters 65-68:
  sum(t, y);;
  ^^^
Error: This expression has type ('a -> 'b -> 'c) list * int -> int
       but an expression was expected of type 'a
       The type variable 'a occurs inside ('a -> 'b -> 'c) list * int -> int
